--- a/dani/sub/create.html
+++ b/dani/sub/create.html
@@ -19,17 +19,28 @@
     </nav>
     <div class="caja">
         <div style="text-align: left;">
-            Identificación: <input type="number" id="identif"><br><br>
-            Nombre: <input type="text" id="name"><br><br>
-            Edad: <input type="number" id="age"><br><br>
-            Ocupación: <input type="text" id="age"><br><br>
-            Departamento: <input type="text" id="departamento"><br><br>
-            Resultado: <input type="text" id="result"><br><br>
-            Etnia: <input type="text" id="ethni"><br><br>
-    
+	    <p style="text-align: left">
+		Identificación: <input type="number" id="identif">
+	    </p>
+            Nombre: <input type="text" id="name">
+	    <p style="text-align: left">
+		Edad: <input type="number" id="age">
+	    </p>
+	    Ocupación: <input type="text" id="age">
+	    <button style="background-color: rgb(52, 235, 79);">+</button>
             Adicionar
+	    <p style="text-align: left">
+		Departamento: <input type="text" id="departamento">
+	    </p>
+            Resultado: <input type="text" id="result">
+	    <button style="background-color: rgb(52, 235, 79);">+</button>
             Adicionar resguardo
+	    <p style="text-align: left">
+		Etnia: <input type="text" id="ethni">
+	    <button style="background-color: rgb(52, 235, 79);">+</button>
             Adicionar etnia
+	    </p>
+    
             <button type="submit">Agregar</button>
         </div>
     </div>
